Archive2/ae/7a4ef55171062f/main.cpp
#include <stdio.h>
#include <stdlib.h>

struct site{
    char name[20] = { 0 };
    int no_of_pages;
};


int main()
{
    struct site a;
    return 0;
}
